Fixed horizontal scroll issue in logbook

--- a/src/main/resources/be/ugent/objprog/ugentopoly/css/ui/logbook.css
+++ b/src/main/resources/be/ugent/objprog/ugentopoly/css/ui/logbook.css
@@ -33,7 +33,6 @@
     -fx-background-color: #2b2b2b;
     -fx-text-fill: #ffffff;
     -fx-alignment: center-left;
-    -fx-padding: 0 0 0 10px;
     -fx-cell-size: 80px;
 }
 
@@ -106,11 +105,11 @@
 
 .table-view .table-row-cell .timestampColumn {
     -fx-text-alignment: center;
+    -fx-alignment: center;
 }
 
 .table-view .table-row-cell .logColumn {
     -fx-text-alignment: left;
-    -fx-padding: 0 0 0 10px;
 }
 
 .anchor-pane {
